--- a/feature.html
+++ b/feature.html
@@ -117,7 +117,7 @@
                             <i class="fa fa-cubes fs-4 text-white"></i>
                         </div>
                         <h3>Best In Industry</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0">15+ years of expertise in financial consulting.</p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
