--- a/index.html
+++ b/index.html
@@ -256,21 +256,21 @@
                             <i class="fa fa-cubes fs-4 text-white"></i>
                         </div>
                         <h3>Best In Industry</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0">15+ years of expertise in financial consulting.</p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-percent fs-4 text-white"></i>
                         </div>
                         <h3>99% Success Rate</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0">Proven track record in tax, compliance, and business solutions.</p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-award fs-4 text-white"></i>
                         </div>
                         <h3>Award Winning</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0">Recognized for excellence in financial consultancy.</p>
                     </div>
                 </div>
             </div>
@@ -290,21 +290,21 @@
                             <i class="far fa-smile-beam fs-4 text-white"></i>
                         </div>
                         <h3>100% Happy Client</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0"> Personalized solutions tailored to your needs.</p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-user-tie fs-4 text-white"></i>
                         </div>
                         <h3>Professional Advisors</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0">Skilled professionals ensuring strategic financial guidance.</p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-headset fs-4 text-white"></i>
                         </div>
                         <h3>24/7 Customer Support</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
+                        <p class="mb-0">Always available to assist you with your financial needs.</p>
                     </div>
                 </div>
             </div>
